k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-utente
  labels:
    app: simple-utente
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-utente
  template:
    metadata:
      labels:
        app: simple-utente
    spec:
      containers:
        - name: simple-utente
          image: registry.nosi.cv/igrp-simple-servico/simple-utente:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
