k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-utente-service
  labels:
    app: simple-utente
spec:
  selector:
    app: simple-utente
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
